@@ -57,7 +57,7 @@ approriately.
         ''"<td>"  gtt-task-time-str   ''"</td>\n"
         ''"<td>"  gtt-task-value-str  ''"</td>\n"
         ''"<td>"  gtt-task-billable-value-str  ''"</td>\n"
-        ''</tr>
+        ''"</tr>"
     )
 )
 
@@ -92,7 +92,7 @@ The table below shows only paid tasks:
         ''"<td>"  gtt-task-time-str   ''"</td>\n"
         ''"<td>"  gtt-task-value-str  ''"</td>\n"
         ''"<td>"  gtt-task-billable-value-str  ''"</td>\n"
-        ''</tr>
+        ''"</tr>"
     )
 )
 
@@ -127,7 +127,7 @@ The table below shows only the items withheld from billing:
         ''"<td>"  gtt-task-time-str   ''"</td>\n"
         ''"<td>"  gtt-task-value-str  ''"</td>\n"
         ''"<td>"  gtt-task-billable-value-str  ''"</td>\n"
-        ''</tr>
+        ''"</tr>"
     )
 )
 
