@@ -279,7 +279,7 @@ that can be used to build a report.
         ''"<td>"  gtt-task-time-str   ''"</td>\n"
         ''"<td>"  gtt-task-value-str  ''"</td>\n"
         ''"<td>"  gtt-task-billable-value-str  ''"</td>\n"
-        ''</tr>
+        ''"</tr>"
     )
 )
 
